2008-07-28  Ivan N. Zlatev  <contact@i-nz.net>

	* TableLayout.cs: MS adds rows instead of columns even when 
	GrowStyle is AddColumns, but RowCount is 0.

2008-07-26  Ivan N. Zlatev  <contact@i-nz.net>

	* TableLayout.cs: Perform layout even if they are no child controls, so 
	that cell sizes are updated properly for the cell border painting.

2008-07-25  Ivan N. Zlatev  <contact@i-nz.net>

	* TableLayout.cs: For newly created cells for controls without a 
	specifically assinged such enforce AddRows if ColumnCount == 0 else 
	AddColumns if RowCount == 0.
	[Fixes bug #412163]

2008-07-25  Ivan N. Zlatev  <contact@i-nz.net>

	* TableLayout.cs: Automagically add the required number of columns/rows 
	if the control is added at non-existent such. Note that ColumnCount and 
	RowCount do not change in LayoutSettings.
	[Fixes bug #412161]

2008-07-25  Ivan N. Zlatev  <contact@i-nz.net>

	* TableLayout.cs: Initialize columns and rows as empty array, so that we 
	can drop the null check when drawing and always draw the control border, 
	but void for the cell borders if there aren't any.
	[Fixes bug #411858]

2008-07-07  Ivan N. Zlatev  <contact@i-nz.net>

	* TableLayout.cs: Controls bounds should be taken into account regardless
	of their Dock and Anchor states.
	[Fixes bug #402651]

2008-06-10  Jonathan Pobst  <monkey@jpobst.com>

	* TableLayoutSettingsTypeConverter.cs: Patch from Andy Hume to
	use InvariantCulture.

2008-06-10  Jonathan Pobst  <monkey@jpobst.com>

	* DefaultLayout.cs, TableLayout.cs, FlowLayout.cs: Use SetBoundsInternal
	instead of SetBoundsCoreInternal.

2008-06-09  Jonathan Pobst  <monkey@jpobst.com>

	* DefaultLayout.cs, TableLayout.cs, FlowLayout.cs: Use SetBoundsCoreInternal
	instead of SetBounds.

2008-06-09  Jonathan Pobst  <monkey@jpobst.com>

	* TableLayoutSettingsTypeConverter.cs: Fix spelling of Columns.
	Accomadate .Net's use of culture separator.  [Fixes bug #398274]

2008-06-03  Jonathan Pobst  <monkey@jpobst.com>
