@@ -119,7 +119,7 @@ namespace System.Windows.Forms.Layout
 
 			XmlDocument xmldoc = new XmlDocument();
 			xmldoc.LoadXml (value as string);
-			TableLayoutSettings settings = new TableLayoutSettings(new TableLayoutPanel ());
+			TableLayoutSettings settings = new TableLayoutSettings(null);
 			int count = ParseControl (xmldoc, settings);
 			ParseColumnStyle (xmldoc, settings);
 			ParseRowStyle (xmldoc, settings);
